hard-gists/4d0f862d981d9bfc6b4f/run.log
=== Docker Run Log for 4d0f862d981d9bfc6b4f ===
Started at: Mi 29. Okt 15:12:05 CET 2025

[2025-10-29 15:12:05] START: Running container for 4d0f862d981d9bfc6b4f
[2025-10-29 15:12:06] SUCCESS: Container fe6bf4b44ebe6f6029418ecb9e83863d21a10cae1d01f6bc3410726afc2a5a4e started for 4d0f862d981d9bfc6b4f
=== Container logs for 4d0f862d981d9bfc6b4f ===
  File "/snippet.py", line 32
    print "%s => %s => %s" % (table_name['Tables_in_glance'], column_name['column_name'], uuid)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4d0f862d981d9bfc6b4f ===
[2025-10-29 15:12:08] INFO: Container fe6bf4b44ebe6f6029418ecb9e83863d21a10cae1d01f6bc3410726afc2a5a4e has stopped
